[package]
name = "tmledkey-hal-drv"
version = "0.1.0"
authors = ["Rumato Estorsky"]
edition = "2018"
description = "HAL based driver for Titan Micro 7 segment LED controllers and key scanners"
repository = "https://github.com/rust-rum/tmledkey-hal-drv"
documentation = "https://docs.rs/tmledkey-hal-drv"
license-file = "LICENSE"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["tm1637", "led", "hal"]

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[features]
# Enable key scan functionality (reading data)
key-scan=[]

# Enable 2 wire inteface CLK + DIO
clkdio=[]

# Enable 3 wire inteface CLK + DIO + STB
clkdiostb=[]

# Demo code that you probably would not need for your app
demo=[]

# Demo code that you probably would not need for your app
fx=[]