[package]
name = "tmledkey-hal-drv"
version = "0.1.0"
authors = ["Rumato Estorsky"]
edition = "2018"
description = "HAL based driver for Titan Micro 7 segment LED controllers and key scanners"
repository = "https://github.com/rust-rum/tmledkey-hal-drv"
documentation = "https://docs.rs/tmledkey-hal-drv"
license-file = "LICENSE"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["tm1637", "tm1638", "led", "hal"]

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[features]
# Features that require global_allocator are not enabled by default.
# If you need smaller binary you can use flag `default-features = false` and manually choose features you need.
default=["clkdio", "clkdiostb"]

# Global allocator functions
galloc=[]

# Enable key scan functionality (reading data)
keys=[]

# Enable 2 wire inteface CLK + DIO
clkdio=[]

# Enable 3 wire inteface CLK + DIO + STB
clkdiostb=[]

# Add animation effects helpers
fx=["galloc"]

# Demo code that you probably would not be needeed for production code
demo=["clkdio", "clkdiostb", "keys", "fx"]