[package]
name = "stm32f103"
version = "1.0.0"
authors = ["Rumato Estorsky <rumatoest@users.noreply.github.com>"]
edition = "2018"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmledkey-hal-drv = { version="0.0.2", path  = "../../", features = [] }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
stm32f1 = "0.8.0"
stm32f1xx-hal = { version = "0.4.0", features = ["stm32f103", "rt"] }

[profile.release]
codegen-units = 1
debug = true
lto = true