[package]
name = "stm32f103"
version = "0.4.2-snapshot"
authors = ["Rumato Estorsky <rumatoest@users.noreply.github.com>"]
edition = "2018"
doctest = false

[features]
dioclkstb=[]

[dependencies]
tmledkey-hal-drv = { version="0.1.1", path  = "../../", features = ["demo"] }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
# slab_allocator = "0.3.5"
alloc-cortex-m = "0.3.5"
# alloc_system = "0.1.2"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
stm32f1 = "0.8.0"
stm32f1xx-hal = { version = "0.4.0", features = ["stm32f103", "rt"] }

[profile.release]
codegen-units = 1
debug = true
lto = true